examples/generic.co
// type Bad<X,Y=int,Z> {} // error: required parameter following optional

type Template<X,Y=int> // template def
  x X
  y Y

type Default
  x Template<uint/* Y defaults to int */>

type Instance
  x Template<int,uint> // template use
  y Template<int,uint> // template use
  z Template<int,Template<u8,int>> // template use
